test/interaction/Issue1232.out
Issue1232.hs:«line»:«col»: error: [GHC-61948]
Could not find module ‘Agda.Version’.
Perhaps you meant Data.Version (from base-4.22.0.0)
Use :set -v to see a list of the files searched for.
|
6 | import Agda.Version
| ^^^^^^^^^^^^^^^^^^^

